2011-05-02  Adam Barth  <abarth@webkit.org>

        Change the testing EWS to log failures explicitly to avoid an infinite loop.

        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:

2011-05-02  Adrienne Walker  <enne@google.com>

        Unreviewed, fix misspelled contributor name.

        * Scripts/webkitpy/common/config/committers.py:

2011-05-02  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        cr-linux-ews should run tests
        https://bugs.webkit.org/show_bug.cgi?id=59272

        This patch turns on testing for the cr-linux-ews.  Yay!

        * Scripts/webkitpy/tool/bot/layouttestresultsreader_unittest.py:
        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        * Scripts/webkitpy/tool/commands/earlywarningsystem_unittest.py:
        * Scripts/webkitpy/tool/steps/runtests.py:
        * Scripts/webkitpy/tool/steps/steps_unittest.py:

2011-05-02  Martin Robinson  <mrobinson@igalia.com>

        Incorporate a review comment that I mistakenly omitted from my last commit.

        * DumpRenderTree/gtk/EventSender.cpp: Use unsigned here instead of unsigned int.

2011-05-02  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        EWS should report the list of unexpected failures
        https://bugs.webkit.org/show_bug.cgi?id=59923

        We cache the results of the first layout test results run on the task
        so the EWS can grab them later.  Another option is to include them in
        the exception that's thrown, but this approach seemed slightly more
        aesthetic.

        * Scripts/webkitpy/tool/bot/commitqueuetask_unittest.py:
        * Scripts/webkitpy/tool/bot/patchanalysistask.py:

2011-05-02  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Add base case for a test-running EWS
        https://bugs.webkit.org/show_bug.cgi?id=59920

        Later I will subclass this to run the Chromium Linux EWS.
